# pi-loop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-image.yml
agent/: config.toml  loop.py
bridge/: README.md  bridge.py
deploy/: piloop-agent.service  piloop-bridge.service  usb-gadget-setup.sh  usb-gadget.service
image/stage-piloop/: EXPORT_IMAGE
image/stage-piloop/00-piloop/: 00-packages  00-run.sh  01-run-chroot.sh
piloop/: __main__.py  cli.py  mcp.py  pis.py  runtime.py  transport.py
pis/: example.toml
tests/: test_bridge_chunk.py  test_cli.py  test_loop_config.py  test_mcp.py  test_pis.py  test_runtime.py  test_transport.py
