[project]
name = "pi-loop"
version = "0.0.1"
description = "esp32-loop for a Linux Pi: a controllable arm reachable over WiFi (SSH) and BLE (a Nordic UART shell), with BLE as the out-of-band recovery channel."
requires-python = ">=3.11"
dependencies = ["asyncssh>=2.14", "zeroconf>=0.131", "bleak>=0.22"]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
piloop = "piloop.cli:main"
piloop-mcp = "piloop.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["piloop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
